--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,11 @@
   ],
   "support": {
     "issues": "https://www.drupal.org/project/issues/wingsuit_companion?version=8.x"
+  },
+  "require": {
+    "drupal/ui_patterns_layout_builder": "^1.1",
+    "drupal/ui_patterns_settings": "^2.0",
+    "drupal/ui_patterns": "^1.1",
+    "drupal/ui_patterns_extends": "^1.0"
   }
 }
