--- a/modules/wingsuit_lb/wingsuit_lb.services.yml
+++ b/modules/wingsuit_lb/wingsuit_lb.services.yml
@@ -1,6 +1,6 @@
 services:
   wingsuit_layout.layout_choose_controller_alter:
-    class: Drupal\wingsuit_layout\EventSubscriber\LayoutBuilderBrowserEventSubscriber
+    class: Drupal\wingsuit_lb\EventSubscriber\LayoutBuilderBrowserEventSubscriber
     arguments: []
     tags:
       - { name: event_subscriber }
