--- a/modules/wingsuit_lb/wingsuit_lb.services.yml
+++ b/modules/wingsuit_lb/wingsuit_lb.services.yml
@@ -1,5 +1,5 @@
 services:
-  wingsuit_layout.layout_choose_controller_alter:
+  wingsuit_lb.layout_choose_controller_alter:
     class: Drupal\wingsuit_lb\EventSubscriber\LayoutBuilderBrowserEventSubscriber
     arguments: []
     tags:
