Issue #3243046 by Andrew Answer: Add section_library dependence

--- a/modules/wingsuit_lb/wingsuit_lb.info.yml
+++ b/modules/wingsuit_lb/wingsuit_lb.info.yml
@@ -8,3 +8,4 @@ dependencies:
   - layout_builder_browser:layout_builder_browser
   - field_group:field_group
   - gin_lb:gin_lb
+  - section_library:section_library
