--- a/modules/wingsuit_page_manager/wingsuit_page_manager.info.yml
+++ b/modules/wingsuit_page_manager/wingsuit_page_manager.info.yml
@@ -1,8 +1,7 @@
-name: livit_page_manager
+name: Wingsuit Page Manager module
 type: module
 description: 'Provides theme negitator for page_manager.'
-package: livit
-core: 8.x
+package: Wingsuit
 core_version_requirement: ^8 || ^9
 dependencies:
   - drupal:text
