fix: Update dependency to ui_patterns_settings

--- a/modules/wingsuit_ui_patterns/wingsuit_ui_patterns.info.yml
+++ b/modules/wingsuit_ui_patterns/wingsuit_ui_patterns.info.yml
@@ -7,6 +7,6 @@ dependencies:
   - wingsuit_companion:wingsuit_companion
   - ui_patterns:ui_patterns
   - ui_patterns:ui_patterns_layouts
-  - ui_patterns_settings:ui_patterns_settings (>=8.x-2.x)
+  - ui_patterns_settings:ui_patterns_settings (>=2.0)
   - ui_patterns_extends:ui_patterns_extends
   - components:components
