fix: Add wingsuit permission for admin form

--- a/wingsuit_companion.routing.yml
+++ b/wingsuit_companion.routing.yml
@@ -4,4 +4,4 @@ wingsuit_companion.wingsuit_companion_config_form:
     _form: '\Drupal\wingsuit_companion\Form\ConfigForm'
     _title: 'Wingsuit Settings'
   requirements:
-    _access: 'TRUE'
+    _permission: 'administer wingsuit configuration'
